[metadata]
name = chat-analyzer
version = 1.0.0
author = Ravi Jain
author_email = jravi248@gmail.com
description = A python program to analyze your Social Chats
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/JRavi2/Chat-Analyzer
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = chat_analyzer
python_requires = >=3.6
install_requires =
    click ==7.1.2
    cycler ==0.10.0
    joblib ==1.0.1
    kiwisolver ==1.3.1
    matplotlib ==3.3.4
    numpy ==1.19.5
    Pillow ==8.2.0
    pyparsing ==2.4.7
    python-dateutil ==2.8.1
    scikit-learn ==0.24.1
    scipy ==1.5.4
    six ==1.15.0
    threadpoolctl ==2.1.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    chat_analyzer = chat_analyzer.chat_analyzer:controller
